--- a/index.html
+++ b/index.html
@@ -1177,13 +1177,10 @@
             <a href="https://maps.app.goo.gl/L725UChN7NxvchoD8" target="_blank" class="footer-btn">
                 <i class="fas fa-map-marker-alt"></i> Lokasi Resepsi
             </a>
-            <button class="footer-btn" onclick="shareInvitation()">
-                <i class="fas fa-share-alt"></i> Bagikan Undangan
-            </button>
         </div>
 
         <p style="font-size: clamp(0.8rem, 2vw, 0.9rem); opacity: 0.9; margin-top: 2rem;">
-            © 2025 Undangan Pernikahan Suardi & Icha
+            © 2025 Suardi & Icha
         </p>
         <p style="font-size: clamp(0.7rem, 1.8vw, 0.8rem); opacity: 0.8; margin-top: 1.5rem; letter-spacing: 0.5px;">
             Design by <a href="https://www.instagram.com/muzanni.uce/" target="_blank"
