--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
 
 <body>
     <audio id="bgMusic" loop>
-        <source src="wedding-nasheed.mp3" type="audio/mpeg">
+        <source src="weddingnasheed.mp3" type="audio/mpeg">
     </audio>
 
     <button class="music-control" id="musicBtn">
