--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
 
     <script>
         // Global Variables
-const musicFile = 'Wedding Nasheed.mp3'; // Masukkan nama file musik Anda di sini
+const musicFile = 'weddingnasheed.mp3'; // Masukkan nama file musik Anda di sini
         let musicActive = false;
         let countdownInterval;
 
