--- a/admin.html
+++ b/admin.html
@@ -153,9 +153,9 @@ Berikut link undangan kami, untuk info selengkapnya dari acara silahkan kunjungi
 ${fullLink}
 
 Pada
-🗓️ ${HARI_TANGGAL_AKAD}
-🕐 ${PUKUL_AKAD}
-📍  ${ALAMAT_AKAD}
+🗓️ *${HARI_TANGGAL_AKAD}*
+🕐 *${PUKUL_AKAD}*
+📍  *${ALAMAT_AKAD}*
 
 Mohon maaf perihal undangan hanya dibagikan melalui pesan ini.
 
