--- a/index.html
+++ b/index.html
@@ -761,6 +761,40 @@
             display: block;
         }
 
+        /* Adab Walimah Section */
+        .adab-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 1.5rem;
+            margin-top: 2rem;
+            text-align: center;
+        }
+
+        .adab-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .adab-icon {
+            font-size: 2.5rem;
+            color: var(--primary);
+            margin-bottom: 1rem;
+            width: 60px;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 2px solid var(--accent-light);
+            border-radius: 50%;
+        }
+
+        .adab-text {
+            font-size: 0.85rem;
+            color: var(--gray);
+            line-height: 1.5;
+        }
+
         /* Footer */
         .footer {
             background: var(--primary-dark);
@@ -1137,6 +1171,54 @@
                     </div>
                 </div>
             </section>
+            <section class="content-section" id="adabSection">
+                <div class="section-header">
+                    <h2 class="section-title">Adab Walimah</h2>
+                    <p class="section-desc">Tanpa mengurangi rasa hormat kami, para tamu diharapkan memperhatikan
+                        hal-hal berikut:</p>
+                </div>
+
+                <div class="card fade-in-up">
+                    <div class="adab-grid">
+                        <div class="adab-item">
+                            <div class="adab-icon"><i class="fas fa-users-slash"></i></div>
+                            <p class="adab-text">Tamu pria & wanita terpisah</p>
+                        </div>
+                        <div class="adab-item">
+                            <div class="adab-icon"><i class="fas fa-handshake-slash"></i></div>
+                            <p class="adab-text">Tidak berjabat dengan non-mahrom</p>
+                        </div>
+                        <div class="adab-item">
+                            <div class="adab-icon"><i class="fas fa-praying-hands"></i></div>
+                            <p class="adab-text">Mendo'akan keberkahan untuk pengantin</p>
+                        </div>
+                        <div class="adab-item">
+                            <div class="adab-icon"><i class="fas fa-utensils"></i></div>
+                            <p class="adab-text">Duduk, makan dengan tangan kanan, baca Bismillah</p>
+                        </div>
+                        <div class="adab-item">
+                            <div class="adab-icon"><i class="fas fa-trash-alt"></i></div>
+                            <p class="adab-text">Tidak Mubadzir</p>
+                        </div>
+                        <div class="adab-item">
+                            <div class="adab-icon"><i class="fas fa-smoking-ban"></i></div>
+                            <p class="adab-text">Tidak Merokok</p>
+                        </div>
+                        <div class="adab-item">
+                            <div class="adab-icon"><i class="fas fa-mosque"></i></div>
+                            <p class="adab-text">Menjaga waktu sholat</p>
+                        </div>
+                        <div class="adab-item">
+                            <div class="adab-icon"><i class="fas fa-user-check"></i></div>
+                            <p class="adab-text">Berpakaian dengan rapi & sopan</p>
+                        </div>
+                        <div class="adab-item">
+                            <div class="adab-icon"><i class="fas fa-camera"></i></div>
+                            <p class="adab-text">Tidak memfoto pengantin tanpa izin</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 
@@ -1169,6 +1251,7 @@
         </div>
     </nav>
 
+
     <footer class="footer" id="footerSection">
         <div class="footer-actions">
             <a href="https://maps.app.goo.gl/wpePZmcPo59v2xQW6?g_st=aw" target="_blank" class="footer-btn">
@@ -1194,7 +1277,7 @@
 
     <script>
         // Global Variables
-const musicFile = 'weddingnasheed.mp3'; // Masukkan nama file musik Anda di sini
+        const musicFile = 'weddingnasheed.mp3'; // Masukkan nama file musik Anda di sini
         let musicActive = false;
         let countdownInterval;
 
