--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
                         Gang Losari 23 RT 07<br>
                         Berbas Pantai
                     </div>
-                    <a href="https://maps.app.goo.gl/wpePZmcPo59v2xQW6?g_st=aw" target="_blank" class="location-link">
+                    <a href="https://maps.app.goo.gl/TW29XA1CGeCaRk5d6" target="_blank" class="location-link">
                         <i class="fas fa-map-marker-alt"></i> Lihat Lokasi
                     </a>
                 </div>
