--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,7 @@
 
     <footer class="footer" id="footerSection">
         <div class="footer-actions">
-            <a href="https://maps.app.goo.gl/wpePZmcPo59v2xQW6?g_st=aw" target="_blank" class="footer-btn">
+            <a href="https://maps.app.goo.gl/TW29XA1CGeCaRk5d6" target="_blank" class="footer-btn">
                 <i class="fas fa-map-marker-alt"></i> Lokasi Akad
             </a>
             <a href="https://maps.app.goo.gl/L725UChN7NxvchoD8" target="_blank" class="footer-btn">
