--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin: Generator Pesan Undangan</title>
+    <title>Input Nama Tamu</title>
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -92,7 +92,7 @@
 <body>
 
     <div class="container">
-        <h1>Generator Pesan Undangan</h1>
+        <h1>Input Nama Tamu</h1>
         
         <div class="form-group">
             <label for="guestNameInput">Nama Tamu Undangan:</label>
