--- a/admin.html
+++ b/admin.html
@@ -135,9 +135,9 @@
         const NAMA_PRIA = "Suardi, S.H.";
         const NAMA_WANITA = "Siti Nurhaliza";
         const LINK_UNDANGAN_DASAR = "https://suardi-icha.netlify.app/";
-        const HARI_TANGGAL_AKAD = "Senin, 1 September 2025";
+        const HARI_TANGGAL_AKAD = "Selasa, 2 September 2025";
         const PUKUL_AKAD = "11.00 WITA sd Selesai";
-        const ALAMAT_AKAD = "Gang Losari 23 RT 07, Berbas Pantai";
+        const ALAMAT_AKAD = "Jl. Hasanuddin RT 22, Berbas Pantai";
 
         // Mengambil elemen dari HTML
         const guestListInput = document.getElementById('guestListInput');
