--- a/index.html
+++ b/index.html
@@ -1332,8 +1332,12 @@
         <p style="font-size: clamp(0.8rem, 2vw, 0.9rem); opacity: 0.9; margin-top: 2rem;">
             © 2025 Suardi & Icha
         </p>
+        
         <p style="font-size: clamp(0.7rem, 1.8vw, 0.8rem); opacity: 0.8; margin-top: 1.5rem; letter-spacing: 0.5px;">
-            Design by <a href="https://www.instagram.com/muzanni.uce/" target="_blank"
+        Mau dibuatin undangan digital? 
+       <br>
+        
+            DM Instagram <a href="https://www.instagram.com/muzanni.uce/" target="_blank"
                 style="color: var(--accent-light); text-decoration: none; font-weight: 500;">@muzanni.uce</a>
         </p>
     </footer>
